--- a/gameSeparated.html
+++ b/gameSeparated.html
@@ -6,7 +6,7 @@
     <title>Drawing Generator</title>
     <link rel="stylesheet" href="styles.css">
     <header>
-        <h1 id="title">𝓓𝓡𝓐𝓦𝓘𝓝𝓖 𝓖𝓔𝓝𝓔𝓡𝓐𝓣𝓞𝓡</h1>
+        <h1 id="title">𝓓𝓡𝓐𝓦𝓘𝓝𝓖 𝓘𝓓𝓔𝓐 𝓖𝓔𝓝𝓔𝓡𝓐𝓣𝓞𝓡</h1>
         <label for="language-selector">Language:</label>
         <select id="language-selector">
             <option value="en">English</option>
