--- a/gameSeparated.html
+++ b/gameSeparated.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drawing Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style/styles.css">
     <header>
         <h1 id="title">𝓓𝓡𝓐𝓦𝓘𝓝𝓖 𝓘𝓓𝓔𝓐 𝓖𝓔𝓝𝓔𝓡𝓐𝓣𝓞𝓡</h1>
         <label for="language-selector">Language:</label>
@@ -73,9 +73,9 @@
         </div>
         
     </div>
-    <script src="categories.js"></script>
-    <script src="translations.js"></script>
-    <script src="generationsAndButtons.js"></script>
+    <script src="Scripts/categories.js"></script>
+    <script src="Scripts/translations.js"></script>
+    <script src="Scripts/generationsAndButtons.js"></script>
     
 </body>
 </html>
