--- a/gameSeparated.html
+++ b/gameSeparated.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drawing Generator</title>
     <link rel="stylesheet" href="style/styles.css">
-    <header>
+    <nav class="navbar" id="navbar"> 
         <h1 id="title">𝓓𝓡𝓐𝓦𝓘𝓝𝓖 𝓘𝓓𝓔𝓐 𝓖𝓔𝓝𝓔𝓡𝓐𝓣𝓞𝓡</h1>
         <label for="language-selector">Language:</label>
         <select id="language-selector">
             <option value="en">English</option>
             <option value="es">Español</option>
         </select>
-    </header>
+    </nav>
     
 </head>
 <body>
